# wipro-assignment-varsha

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  cloudbuild.yaml  config.py  db.py  logging_config.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  schemas.py  security.py
agents/: base_agent.py  consistency_checker.py  credit_analyst.py  critic_agent.py  debt_analyzer.py  employment_verifier.py  fraud_detector.py  graph.py  income_verifier.py  intake_agent.py  negotiator_agent.py  planner_agent.py  report_writer.py  response_schemas.py  risk_assessor.py  tools.py
scripts/: update_loan_pptx.py
templates/: index.html
tests/: conftest.py  test_consistency_checker.py  test_critic_agent.py  test_graph.py  test_intake_agent.py  test_negotiator_agent.py  test_planner.py  test_response_schemas.py  test_schemas.py  test_tools.py
