[project]
name = "loan-risk-multiagent"
version = "1.0.0"
description = "Multi-agent loan risk assessment deployed on Cloud Run."
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["agents", "app", "config", "db", "logging_config", "models", "schemas", "security"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "venv", "dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "C4", "SIM"]
ignore = [
    "E501",  # line length handled by black
    "E731",  # lambdas are used extensively in the existing rule engine
    "S101",  # assert is OK in tests
    "S104",  # binding to 0.0.0.0 is required for Cloud Run
    "B008",  # FastAPI/Pydantic-style default args not used here
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --strict-markers"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
