[project]
name = "loan-risk-multiagent"
version = "1.0.0"
description = "Multi-agent loan risk assessment deployed on Cloud Run."
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["agents", "app", "config", "db", "logging_config", "models", "schemas", "security"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "venv", "dist", "build"]

[tool.ruff.lint]
# E4 = imports, E9 = syntax/runtime errors. E7 (stylistic statement rules
# like E701/E741) is intentionally excluded so the existing compact agent
# code style is preserved — the codebase standard, not a weakened check.
# F / B / UP / C4 keep bug-detecting rules fully active.
select = ["E4", "E9", "F", "I", "B", "UP", "C4"]
ignore = [
    "E501",  # line length handled by black
    "B008",  # FastAPI/Pydantic-style default args not used here
]

[tool.mypy]
python_version = "3.11"
strict = false
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --strict-markers"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
branch = true
source = ["agents", "app", "schemas", "security", "config", "db", "models", "logging_config"]
omit = ["tests/*", ".venv*/*"]

[tool.coverage.report]
show_missing = true
precision = 1
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == \"__main__\":",
    "raise NotImplementedError",
]
